--- a/answers.conf
+++ b/answers.conf
@@ -12,3 +12,4 @@ APKREPOSOPTS="https://dl-cdn.alpinelinux.org/alpine/latest-stable/main"
 SSHDOPTS="-c openssh"
 NTPOPTS="-c chrony"
 DISKOPTS="-m sys /dev/xvda"
+ROOTPASSWD='$6$rounds=$5$up0LCje0cFNt3Nxx$AaL5SAQXQoo2zxjjCFt73tWdMcGp84pRz.5rMBfVrE4'
